--- a/style.css
+++ b/style.css
@@ -9,6 +9,5 @@
 }
 
 h1{text-align: center; transform: translateY(2em);}
-#likeButton{ background-color:rgb(218, 0, 0);; font-size: 1.7em; color: rgb(255, 255, 255); position: absolute;
-top: 10em;left: 8em;}
+#likeButton{ background-color:rgb(218, 0, 0);; font-size: 1.7em; color: rgb(255, 255, 255);}
 img{width: 30em; height: 28em;}
